- поправлена проблема с редиректом при отправке решения задачи (удалена страница submitSuccess.jsp) - переход на Java 7 - мелкие исправления в коде